# wasm-spectec-static

./: .gitignore  Makefile  README.md
documentation/: Intro.md
spectec/lib/: dune
spectec/lib/common/: attempt.ml  common.ml  common.mli  domain.ml  dune  internal_error.ml  print.ml  source.ml
spectec/lib/concrete/: dune  hint.ml  pp.ml
spectec/lib/elaborate/: attempt.ml  ctx.ml  elab.ml  error.ml  fresh.ml
spectec/lib/elaborate/dataflow/: analysis.ml  bind.ml  binding.ml  collectbind.ml  dimension.ml  multibind.ml  partialbind.ml
spectec/lib/frontend/: error.ml
spectec/lib/il/: ast.ml  ast.mli  dune  il.ml  il.mli  utils.ml  value.ml
spectec/lib/il/core/: effects.ml  eq.ml  free.ml  print.ml  print_debug.ml  typ.ml  utils.ml  value.ml
spectec/lib/interface/: dune  interface.ml
spectec/lib/interface/concrete/: dune  hint.ml  pp.ml
spectec/lib/interface/p4/: context.ml  debug_config.ml  dune  error.ml  extract.ml  lexer.mll  parse.ml  parser.mly  parser_debug.ml  preprocessor.ml  source.ml
spectec/lib/interp/: dune  interp.ml
spectec/lib/interp-il/: ctx.ml  error.ml  interp.ml  runner.ml  trace.ml
spectec/lib/interp-il/builtin/: arg.ml  builtin.ml  define.ml  define.mli  err.ml  fresh.ml  lists.ml  maps.ml  nats.ml  numerics.ml  parse.ml  sets.ml  texts.ml
spectec/lib/interp-sl/: ctx.ml  dune  error.ml  interp.ml  runner.ml
spectec/lib/interp-sl/builtin/: lists.ml
spectec/lib/interp/builtins/: arg.ml  builtins.ml  define.ml  define.mli  dune  error.ml  fresh.ml  lists.ml  maps.ml  nats.ml  numerics.ml  sets.ml  texts.ml
spectec/lib/interp/eval_il/: attempt.ml  ctx.ml  dune  error.ml  interp.ml  runner.ml  trace.ml
spectec/lib/interp/eval_sl/: ctx.ml  dune  error.ml  interp.ml  runner.ml  sign.ml
spectec/lib/lang/: dune
spectec/lib/lang/el/: el.ml  el.mli  free.ml  print.ml  types.ml
spectec/lib/lang/il/: free.ml  il.ml  il.mli  print.ml  print_debug.ml  typ.ml  types.ml  utils.ml  value.ml
spectec/lib/lang/sl/: eq.ml  print.ml  sl.ml  sl.mli  types.ml
spectec/lib/lang/xl/: atom.ml  bool.ml  mixop.ml  num.ml  utf8.ml  var.ml
spectec/lib/p4/: dune  error.ml  extract.ml  lexer.mll  parse.ml  parser.mly  parser_debug.ml
spectec/lib/pass/: dune  pass.ml
spectec/lib/pass/elaborate/: attempt.ml  ctx.ml  elab.ml  error.ml  fresh.ml
spectec/lib/pass/frontend/: dune  error.ml  lexer.mll  parse.ml  parser.mly
spectec/lib/pass/structure/: antiunify.ml  instrument.ml  optimize.ml  renamer.ml  struct.ml
spectec/lib/runner/: dune  error.ml  error.mli  run.ml  runner.ml
spectec/lib/runtime-dynamic/: cache.ml  dune  envs.ml  typ.ml  typdef.ml  value.ml  var.ml
spectec/lib/runtime-dynamic-il/: func.ml  rel.ml
spectec/lib/runtime-static/: func.ml  plaintyp.ml  rel.ml  typ.ml
spectec/lib/semantics/: dune  semantics.ml
spectec/lib/semantics/dynamic/: cache.ml  dune  envs.ml  typ.ml  typdef.ml  var.ml
spectec/lib/semantics/dynamic_il/: dune  func.ml  rel.ml
spectec/lib/sl/: ast.ml  eq.ml  print.ml
spectec/lib/structure/: antiunify.ml  instrument.ml  optimize.ml  renamer.ml  struct.ml
spectec/lib/util/: dune  error.ml  util.ml  util.mli
spectec/test/: dune  elab.expected  run_il_pos_p4c.expected  run_sl_pos_p4c.expected  struct.expected  test.ml
(+150 files in other folders)
