(test
 (name test)
 (preprocess
  (pps ppx_let))
 (modules test)
 (libraries spectec core core_kernel core_unix core_unix.command_unix)
 (action
  (progn
   ; (ignore-outputs
   ;  (diff parser_p4c_pos.expected parser_p4c_pos.actual))
   ; (ignore-outputs
   ;  (diff parser_p4c_neg.expected parser_p4c_neg.actual))
   (ignore-outputs
    (diff elab.expected elab.actual))
   (ignore-outputs
    (diff run_il_pos_p4c.expected run_il_pos_p4c.actual))
   ; (ignore-outputs
   ;  (diff run_il_neg_p4c.expected run_il_neg_p4c.actual))
   )))

(rule
 (target elab.actual)
 (action
  (with-stdout-to
   elab.actual
   (with-stderr-to
    elab.err
    (run ./test.exe elab -s ../../../../reference-specs/p4-concrete)))))

(rule
 (target run_il_pos_p4c.actual)
 (action
  (with-stdout-to
   run_il_pos_p4c.actual
   (with-stderr-to
    run_il_pos_p4c.err
    (run
     ./test.exe
     run-il
     -s
     ../../../../reference-specs/p4-concrete
     -i
     ../../../../../0_p4-spectec/p4c/p4include
     -e
     ../../../../../0_p4-spectec/excludes
     -d
     ../../../../../0_p4-spectec/p4c/testdata/p4_16_samples)))))

; (rule
;  (target run_il_neg_p4c.actual)
;  (action
;   (with-stdout-to
;    run_il_neg_p4c.actual
;    (with-stderr-to
;     run_il_neg_p4c.err
;     (run
;      ./test.exe
;      run-il
;      -s
;      ../../../../reference-specs/p4-concrete
;      -i
;      ../../../../../0_p4-spectec/p4c/p4include
;      -e
;      ../../../../../0_p4-spectec/excludes
;      -d
;      ../../../../../0_p4-spectec/p4c/testdata/p4_16_samples
;      -neg)))))
;
; (rule
;  (target parser_p4c_pos.actual)
;  (action
;   (with-stdout-to
;    parser_p4c_pos.actual
;    (with-stderr-to
;     parser_p4c_pos.err
;     (run
;      ./test.exe
;      parser
;      -i
;      ../../../../../0_p4-spectec/p4c/p4include
;      -d
;      ../../../../../0_p4-spectec/p4c/testdata/p4_16_samples
;      -s
;      ../../../../reference-specs/p4-concrete)))))
;
; (rule
;  (target parser_p4c_neg.actual)
;  (action
;   (with-stdout-to
;    parser_p4c_neg.actual
;    (with-stderr-to
;     parser_p4c_neg.err
;     (run
;      ./test.exe
;      parser
;      -i
;      ../../../../../0_p4-spectec/p4c/p4include
;      -d
;      ../../../../../0_p4-spectec/p4c/testdata/p4_16_errors
;      -s
;      ../../../../reference-specs/p4-concrete)))))
